# pencil

./: .astylerc  .gitattributes  .gitignore  .hgignore  .hgignore.txt  .hgtags  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  ChangeLog.md  Doxyfile  ISSUE_TEMPLATE.md  Info.plist  LICENSE.QT.TXT  LICENSE.TXT  README  README.md  TODO.md  appveyor.yml  auto-version.md  common.pri  notes-linux.txt  notes-macosx.txt  notes-win32.txt  pencil.pri  pencil.pro  pencil.qrc  pencil.rc  pencil.ts  pencil2d.desktop  pencil2d.pro  pencil2d.xml  pencil2d_cs.ts  pencil2d_it.ts  penciltest.pro
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  config.yml
.github/workflows/: ci.yml  docs.yml
.tx/: config
3rdlib/quazip/: JlCompress.cpp  qioapi.cpp  quazip.cpp  quazip.h  quazip.pro  unzip.c  unzip.h  zip.h
3rdlib/zlib/: zlib.pro
ESOF-docs/: Plan-base x Agile - thought bubble 1.xml  Plan-based X Agile - thought bubble 1.xml  SoftwareProcesses.md
app/: Pencil2D  aboutdialog.cpp  aboutdialog.h  actioncommands.cpp  actioncommands.h  app.cmake  app.pro  app_util.h  bucketoptionswidget.cpp  bucketoptionswidget.h  bucketoptionswidget.ui  checkupdatesdialog.cpp  checkupdatesdialog.h  colorbox.cpp  colorbox.h  colordictionary.h  colorgrid.cpp  colorgrid.h  colorgriditem.cpp  colorgriditem.h  colorinspector.cpp  colorinspector.h  colorpalettewidget.cpp  colorpalettewidget.h  colorwheel.cpp  colorwheel.h  commandcenter.cpp  commandcenter.h  displayoptionwidget.cpp  displayoptionwidget.h  doubleprogressdialog.cpp  doubleprogressdialog.h  errordialog.cpp  errordialog.h  exportimagedialog.cpp  exportimagedialog.h  exportimageseqdialog.cpp  exportimageseqdialog.h  exportimageseqdialog.ui  exportmoviedialog.cpp  (+38 more)
app/.qm/: pencil_ar.qm  pencil_ca.qm  pencil_cs.qm  pencil_da.qm  pencil_de.qm  pencil_el.qm  pencil_en.qm  pencil_es.qm  pencil_et.qm  pencil_fr.qm  pencil_he.qm  pencil_hu_HU.qm  pencil_id.qm  pencil_it.qm  pencil_ja.qm  pencil_kab.qm  pencil_pl.qm  pencil_pt.qm  pencil_pt_BR.qm  pencil_ru.qm  (+6 more)
core_lib/: canvaspainter.cpp  canvaspainter.h  canvasrenderer.cpp  canvasrenderer.h  core_lib.cmake  core_lib.pro  miniz.cpp  moc_backupelement.cpp  moc_basedockwidget.cpp  moc_basemanager.cpp  moc_basetool.cpp  moc_brushtool.cpp  moc_buckettool.cpp  moc_colorbox.cpp  moc_colorgrid.cpp  moc_colorgriditem.cpp  moc_colorinspector.cpp  moc_colormanager.cpp  moc_colorpalettewidget.cpp  moc_colorwheel.cpp  moc_displayoptiondockwidget.cpp  moc_editor.cpp  moc_erasertool.cpp  moc_eyedroppertool.cpp  moc_handtool.cpp  moc_keycapturelineedit.cpp  moc_layer.cpp  moc_layerbitmap.cpp  moc_layercamera.cpp  moc_layerimage.cpp  moc_layermanager.cpp  moc_layersound.cpp  moc_layervector.cpp  moc_mainwindow2.cpp  moc_movetool.cpp  moc_object.cpp  moc_objectsaveloader.cpp  moc_penciltool.cpp  moc_pentool.cpp  moc_playbackmanager.cpp  (+22 more)
docs/: .gitignore  build-options.md  build_linux.md  build_mac.md  build_win.md  dive-into-code.md  installer-development.md  main.md
icons/: mac_pcl_icon.icns  mac_pclx_icon.icns
libmacosx/: mingpp.h
libwin32/: mingpp.h
pencil/: pencil.pro
resources/: about.html  kb.ini
src/: AStyle.bat  README  README.1st  TODO  cpmac  interfaces.h  linkmac  main.cpp  notes-win32.txt  pencil.icns  pencil.pri  pencil.pro  pencil.qrc  pencil.rc  pencilanimation.geany
tests/: AutoTest.h  main.cpp  moc_test_layer.cpp  moc_test_layermanager.cpp  moc_test_objectsaveloader.cpp  pencil_test.pro  penciltest.pro  test_bitmapimage.cpp  test_bitmapimage.h  test_filemanager.cpp  test_filemanager.h  test_layer.cpp  test_layer.h  test_layermanager.cpp  test_layermanager.h  test_object.cpp  test_object.h  test_objectsaveloader.cpp  test_objectsaveloader.h  test_viewmanager.cpp  test_viewmanager.h  tests  tests.cmake  tests.pro
translations/: Language.cs.qm  Language.cs.ts  Language.da.qm  Language.da.ts  Language.de.qm  Language.de.ts  Language.en.ts  Language.es.qm  Language.es.ts  Language.fr.qm  Language.fr.ts  Language.hu-HU.qm  Language.hu-HU.ts  Language.hu.qm  Language.hu.ts  Language.hu_HU.ts  Language.it.qm  Language.it.ts  Language.ja.qm  Language.ja.ts  Language.pt-BR.qm  Language.pt-BR.ts  Language.pt_BR.ts  Language.ru.qm  Language.ru.ts  Language.zh-TW.qm  Language.zh-TW.ts  Language.zh_TW.ts  pencil.ts  pencil2d_cs.ts  pencil2d_de.ts  pencil2d_ja.ts  pencil_ar.qm  pencil_ar.ts  pencil_bg.ts  pencil_ca.qm  pencil_ca.ts  pencil_cs.qm  pencil_cs.ts  pencil_da.qm  (+58 more)
util/: .gitignore  Doxyfile-Travis  after-build.ps1  after-build.sh  appveyor-mingw.yml  appveyor-msvc.yml  checkchanges-win.ps1  checkchanges.sh  common.pri  documentation-deploy.sh  linux-debian-chroot-setup.sh  linux-debian-packager.sh  linux-ffmpeg-wrapper.sh  macdeploy.sh  nightly-build-upload.py  osx-app-packager.py  qt_creator_code_style.xml  transifex_pull.py  win-build-pencil2d-win32.bat  win-build-pencil2d-x64.bat  win-deploy.ps1
(+1050 files in other folders)
